# Evidentia

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  EVIDENTIA_PRODUCT_BRIEF.md  EVIDENTIA_V2_ARCHITECTURE.md  PLAN.md  README.md  backup.py  create_architecture_diagram.py  debug_startup.py  diagnose.py  docker-compose.yml  generate_pdf.py  pyproject.toml  requirements.txt  streamlit_app.py  test_config.py
.streamlit/: config.toml
skills/: SKILL_01_MSL_INTELLIGENCE_CORE.md  SKILL_02_INSIGHT_CAPTURE_ENGINE.md  SKILL_03_KOL_ENGAGEMENT_TRACKER.md  SKILL_04_FIELD_INTELLIGENCE_DASHBOARD.md  SKILL_05_DATA_QUALITY_RELIABILITY.md  SKILL_06_PERSISTENT_MEMORY_SYSTEM.md  SKILL_07_TEST_DRIVEN_DEVELOPMENT.md  SKILL_08_SYSTEMATIC_DEBUGGING.md  SKILL_09_UI_UX_STANDARDS.md  SKILL_10_DEVELOPMENT_WORKFLOW.md
src/agents/: gtm_workflow.py
src/agents/gtm_agents/: competitor_analysis_agent.py  icp_definition_agent.py  market_research_agent.py  messaging_agent.py  payer_intelligence_agent.py  synthesis_agent.py
src/core/: llm.py  llm_provider.py  logger.py  settings.py
src/data_sources/: clinicaltrials_api.py
src/schema/: agent_messages.py  gtm_output.py  gtm_state.py
src/service/cache/: cache_manager.py
src/service/generators/: pdf_generator.py
src/service/tools/: clinical_trials_tools.py  epidemiology_tools.py  fda_tools.py  pubmed_tools.py  tavily_tools.py  who_epidemiology_tools.py
src/service/validators/: input_validator.py  json_validator.py
src/ui/: app.py  app.py.save  components.py
src/utils/: formatters.py
