[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-simulator"
version = "0.1.0"
description = "AI-powered pharma GTM strategy generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pranjal Das", email = "daspranjal.pd@gmail.com"}
]
keywords = ["pharma", "gtm", "ai", "langgraph", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.52.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"